ghc-4335c07/testsuite/tests/quotes/TH_localname.hs
module TH_localname where

x = \y -> [| y |]
